# LocalImageSearch

./: .gitattributes  .gitignore  README.md  config.py  dbIndex.py  dbSearch.py  dbSearchGui.py  distanceFunctions.py  onnxImageSearch.py  pyproject.toml  requirements.txt  settings.json
PretrainedEncoder/Indexes/: matching.csv
VLMEncoder/: mobileclip2_s0_image_encoder.onnx  mobileclip2_s0_text_encoder.onnx  mobileclip_image_transforms.py  openclip_tokenizer.py  test_inference.py
figures/: drag_and_drop.webm
